Fix help text cut off bug, fixes #1445

--- a/theme/pxt.less
+++ b/theme/pxt.less
@@ -37,7 +37,7 @@
 #maineditor {
     left: @simulatorWidth;
     right: 0;
-    overflow: hidden;
+    overflow: visible;
 }
 .rtl #maineditor {
     left:0;
